--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:id="@+id/connect_room_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Подключиться"
+        android:text="Присоединиться"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/connect_room_edit_text">
